# aws-lambda-scrapper

./: Dockerfile  README.md  driver.py  lambda_function.py  pyproject.toml
