[tool.poetry]
name = "aws-lambda-scrapper"
version = "0.1.0"
description = "AWS Lambda Scrapper"
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
